fix width of tutorial message on mobile

--- a/theme/tutorial.less
+++ b/theme/tutorial.less
@@ -548,7 +548,7 @@ code.lang-filterblocks {
         --bubble-pulse-size: 16px;
     }
 
-    .tutorial #tutorialcard .tutorialmessage {
+    .tutorial #tutorialcard.hasHint .tutorialmessage {
         width: ~'calc(100% - @{mobileAvatarMargin} - 0.5rem)';
     }
 
